--- a/projeto-cortel/estilo/style.css
+++ b/projeto-cortel/estilo/style.css
@@ -62,6 +62,10 @@
     font-size: 3.5vw;
  }
 
+ section > p {
+   padding-bottom: 2em;
+ }
+
  section.normal {
     background-color: white;
     color: black;
@@ -70,13 +74,29 @@
  section.imagem {
     background-color: rgb(77, 77, 77);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.555);
+    background-size: cover;
+    background-attachment: fixed;
  }
 
  section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgb(88, 88, 88);
+    background-color: rgba(0, 0, 0, 0.515);
+    text-shadow: 2px 2px 0px black;
+    
 
+ }
+
+ section#img01 {
+     background-image: url('../imagens/background001.jpg');
+     background-position: right center;
+  
+ }
+
+ section#img02 {
+     background-image: url('../imagens/background002.jpg');
+   
  }
 
  footer {
